--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
 
           <div class="list-of-users">
-            <h2>List of users</h2>
+            <h2 class="title-list-user"></h2>
             <div class="list-container"></div>
           </div>
 
