--- a/index2.html
+++ b/index2.html
@@ -13,11 +13,11 @@
       <div id="main">
         <nav>
           <a href="/">Home</a>
-          <a href="/about">About us</a>
+          <a href="#about">About us</a>
         </nav>
       </div>
       <div id="content"></div>
     </div>
-    <script src="/url-router.js"></script>
+    <script src="/hash-router.js"></script>
   </body>
 </html>
