--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
       <header class="header">
         <button class="button-registration">Registration</button>
         <button class="button-login">Login</button>
+        <a href="/">Home</a>
+        <a href="#about">About</a>
       </header>
 
       <div class="conteiner">
         <nav class="navigation"></nav>
 
         <main class="content">
+          <div class="page-content"></div>
+          
           <div class="modal-delete" data-modal-window="modal-delete">
             <div class="modal-content">
               <span class="close" title="Close Modal">&times;</span>
