--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <button class="button-registration">Registration</button>
         <button class="button-login">Login</button>
-        <a href="/">Home</a>
+        <a href="#home">Home</a>
         <a href="#about">About</a>
       </header>
 
@@ -21,7 +21,7 @@
 
         <main class="content">
           <div class="page-content"></div>
-          
+
           <div class="modal-delete" data-modal-window="modal-delete">
             <div class="modal-content">
               <span class="close" title="Close Modal">&times;</span>
@@ -109,14 +109,7 @@
             </div>
           </div>
 
-          <div class="list-of-users">
-            <h2 class="title-list-user"></h2>
-            <div class="list-container"></div>
-          </div>
-
-          <div
-            class="modal-registration registration"
-            data-modal-window="modal-registration"
+          <div class="modal-registration registration" data-modal-window="modal-registration"
           >
             <form class="registration-form" method="post">
               <span class="close" title="Close Modal">&times;</span>
