--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button class="button-login">Login</button>
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#contact">Contact</a>
       </header>
 
       <div class="conteiner">
