--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" href="http://localhost:3000/image/ikon.png">
   </head>
   <body>
     <div class="wraper">
@@ -16,6 +17,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
+        <a href="#addImage">Add image</a>
       </header>
 
       <div class="conteiner">
