--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   class="form-input"
                   type="email"
                   id="email-login"
-                  name="email1"
+                  name="email"
                   placeholder="name@example.com"
                   required
                   data-error-message="Email or password is not correct!"
@@ -214,7 +214,7 @@
                 <input
                   class="form-input"
                   type="password"
-                  name="password-login"
+                  name="password"
                   id="password-login"
                   required
                   data-error-message="Email or password is not correct!"
